correction of background pattern overflow

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header {
 }
 .left {
     position: absolute;
-    top: 449px;
+    top: 450px;
     left: 0;
 }
 .right {
